--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,8 @@ Cargo.lock
 
 # MSVC Windows builds of rustc generate these, which store debugging information
 *.pdb
-
+emnist-gzip/
+archive(1)/
 /mnist
 /burn_app
 checkpoint/
